--- a/rwd_practice_two/src/style/layout/header.css
+++ b/rwd_practice_two/src/style/layout/header.css
@@ -1,6 +1,7 @@
 .header-layout {
   width: 100%;
-  padding: 17px 16px;
+  min-height: 112px;
+  padding: 0 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,6 +12,7 @@
   .header-layout {
     display: flex;
     justify-content: space-between;
-    padding: 38px 40px 40px 20px;
+    padding: 0 40px;
+    min-height: 156px;
   }
 }
