--- a/rwd_practice_two/src/style/main.css
+++ b/rwd_practice_two/src/style/main.css
@@ -18,4 +18,4 @@
 @import url("/style/component/footer.css");
 
 /* layout */
-@import url("/style//layout/layout.css");
+@import url("/style/layout/layout.css");
